# talos-te-sbjat

./: README.md  license.txt  project.toml  pyproject.toml  setup.py
sbjat/: main.py
sbjat/common/: getsbrs.py  juno.py  logdata.py  postjira.py  settings.py
te_sbjat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
